tests/errors/parser/while-without-body.futil
component main() -> () {
  cells { }
  wires { }
  control {
    while r.out with cond {
      upd0;
      upd1;
      upd2;
    }
  }
}
