tests/errors/parser/while-without-body.expect
---CODE---
1
---STDERR---
Error: tests/errors/parser/while-without-body.futil
5 |    while r.out with cond {
  |    ^^^^^^^^^^^^^^^^^^^^^^^ Undefined combinational group name: cond
